# ParticleCUDASimulation

./: CMakeLists.txt  IMPLEMENTATION.md  README.md
.github/: copilot-instruction.md
.github/prompts/: execute-tests-v1.prompt.md  generate-unit-tests-v1.prompt.md  implement-it-micro-v1.md.prompt.md
include/: OpenglWindow.h  Particle.h  ParticleRenderer.h  ParticleSystem.h
src/: OpenglWindow.cpp  ParticleKernels.cu  ParticleRenderer.cpp  ParticleSystem.cpp  main_particle.cpp
tests/: ParticleSystem_test.cpp  README.md  cuda_mocks.cpp  cuda_mocks.h
